-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.4.1
-
Fix Version/s: None
-
Component/s: QPA: X11/XCB, Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:Linux X11
QWidget::setWindowRole should set WM_WINDOW_ROLE as a window property. The current code updates a member variable which is then unused, it is not passed to the relevant QWindow.
The XCB backend has no calls to set the WM_WINDOW_ROLE.
Further information and the problems it causes: https://bugs.kde.org/show_bug.cgi?id=345924
- relates to
-
QTBUG-49939 QGuiApplication wrongly tries to ::tryCloseAllWindows() in QGuiApplicationPrivate::commitData()
-
- Closed
-